refactor: corrected all the remaining checkstyle errors in tests